# fundingpips_scalper

./: .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  EURUSD_M15_in.csv  EURUSD_M15_out.csv  PROMPT.md  README.md  SUMMARY.md  environment.yml  pyproject.toml  requirements-strict.txt  setup.py
.github/workflows/: ci.yml
config/: rdagent.yaml
ea/: EA_template.mq5
src/: __init__.py  data_prep.py  fundingpips_reward.py  inject_params.py  run_self_loop.py  strategy.py
src/fundingpips_scalper/: __init__.py  data_prep.py  fundingpips_reward.py  inject_params.py  run_self_loop.py  strategy.py
tests/: test_misc.py  test_pipeline.py  test_reward.py  test_strategy.py
tests/fixtures/: EURUSD_M15_sample.csv
